Fix broken UI at smaller window widths

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -14,6 +14,8 @@ html, body, main {
   color: $dark-color;
   text-rendering: optimizeLegibility;
   background-color: #fcfcfc;
+  min-width: 1110px;
+  overflow-x: scroll;
 }
 
 #front-door {
